<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_recording">

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/empty_red_box"
        app:layout_constraintStart_toEndOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_box"
        app:layout_constraintStart_toEndOf="@+id/imageView38"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blue_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView26"
        app:layout_constraintEnd_toStartOf="@+id/imageView25"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/blue_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView31"
        app:layout_constraintEnd_toStartOf="@+id/imageView30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView31" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blue_button"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blue_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/long_blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/long_blue_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView28"
        app:layout_constraintStart_toEndOf="@+id/imageView34" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_button"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/imageView31" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintStart_toEndOf="@+id/imageView26" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:src="@drawable/red_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintStart_toEndOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yellow_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintStart_toEndOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yellow_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintStart_toEndOf="@+id/imageView25" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yellow_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView28"
        app:layout_constraintStart_toEndOf="@+id/imageView30" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/recording_score_FR"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_service_FR"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView34"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_echange_FR"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/green_label"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toBottomOf="@+id/imageView36" />

    <ImageView
        android:id="@+id/imageView392"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:src="@drawable/green_label"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="18dp"
        android:layout_height="22dp"
        android:src="@drawable/green_label"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toStartOf="@+id/imageView26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/green_label"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_Joueur_1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView36" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_Joueur_2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView38"
        app:layout_constraintEnd_toEndOf="@+id/imageView38"
        app:layout_constraintStart_toStartOf="@+id/imageView38"
        app:layout_constraintTop_toTopOf="@+id/imageView38" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_J1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView392"
        app:layout_constraintEnd_toEndOf="@+id/imageView392"
        app:layout_constraintStart_toStartOf="@+id/imageView392"
        app:layout_constraintTop_toTopOf="@+id/imageView392" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_J2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="@+id/imageView40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_1st_ball_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="@+id/imageView34"
        app:layout_constraintStart_toStartOf="@+id/imageView34"
        app:layout_constraintTop_toTopOf="@+id/imageView34" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_2nd_ball_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView30"
        app:layout_constraintEnd_toEndOf="@+id/imageView30"
        app:layout_constraintStart_toStartOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_ace"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView31"
        app:layout_constraintEnd_toEndOf="@+id/imageView31"
        app:layout_constraintStart_toStartOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_ace"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintEnd_toEndOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/imageView30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_double_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView29"
        app:layout_constraintEnd_toEndOf="@+id/imageView29"
        app:layout_constraintStart_toEndOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView29" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_winning_point_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
        app:layout_constraintEnd_toEndOf="@+id/imageView26"
        app:layout_constraintStart_toStartOf="@+id/imageView26"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_winning_point_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_direct_fault_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintStart_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toTopOf="@+id/imageView23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_direct_fault_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="@+id/imageView25"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_provo_faute_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_provo_faute_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_photo_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/imageView19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_terminer_FR"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_score_1"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView36"
        app:layout_constraintStart_toEndOf="@+id/imageView32" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_score_2"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/recording_jeu_1"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_jeu_2"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/recording_set_1"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_set_2"
        android:textColor="#30344B"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView18" />


</androidx.constraintlayout.widget.ConstraintLayout>